Refactor bits and install dependencies

--- a/code/composer.json
+++ b/code/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "alaa/seed",
   "description": "Import mysql database",
+  "version": "1.0.0",
   "type": "library",
   "license": "MIT",
   "keywords": [
