--- a/.workspace/php-cli/8.4/Dockerfile
+++ b/.workspace/php-cli/8.4/Dockerfile
@@ -13,7 +13,9 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update \
     && apt-get install -y git \
-    vim
+    vim \
+    zip \
+    unzip
 
 
 
