--- a/bin/build
+++ b/bin/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e
 
-path=$(dirname $(dirname "${BASH_SOURCE[0]}"))
+path="$(realpath "$(dirname "$(dirname "${BASH_SOURCE[0]}")")")"
 
-docker-compose -f $path/docker-compose.yml build "$@"
-docker-compose -f $path/docker-compose.yml up -d --remove-orphans
+docker-compose -f "$path"/docker-compose.yml build "$@"
+docker-compose -f "$path"/docker-compose.yml up -d --remove-orphans
