--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
+# APP name also the docker container name
 APP_NAME=seed
+
+# PHP Version
 PHP_VERSION=8.3
+
+#MySQL port
 MYSQL_PORT=3307
+
+# Container ip, used to allow access to MySQL from host
+# See command `bin/seed host:mysql`
 CONTAINER_IP=192.168.148.1
+
+# The configuration file to set seed script path
+# See Command `bin/seed set:path`
+ZSH_FILE=~/.zshrc
