--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_NAME=seed
 # PHP Version
 PHP_VERSION=8.3
 
-#MySQL port
+#MySQL bind port
 MYSQL_PORT=3307
 
 # Container ip, used to allow access to MySQL from host
