--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # APP name also the docker container name
 APP_NAME=seed
 
-# PHP Version
-PHP_VERSION=8.3
+#MariaDB Version
+MARIADB_VERSION=10.11
 
 #MySQL bind port
 MYSQL_PORT=3307
