--- a/code/composer.json
+++ b/code/composer.json
@@ -16,9 +16,9 @@
     }
   ],
   "require": {
-    "symfony/console": "^7.3",
-    "symfony/finder": "^7.3",
-    "laminas/laminas-db": "^2.20"
+    "symfony/console": "*",
+    "symfony/finder": "*",
+    "laminas/laminas-db": "*"
   },
   "autoload": {
     "psr-4": {
