--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # APP name also the docker container name
 APP_NAME=seed
 
+# SQL Server = (mariadb)
+SQL_SERVER=mariadb
+
 # MariaDB Version
 MARIADB_VERSION=10.11
 
